<resources>
    <string name="app_name">capstone</string>
    <string name="comfortable">COMFORTABLE \nFETCH</string>
    <string name="comfort_for">COMFORT FOR YOUR DOG</string>
    <string name="buttonImage">buttonImage</string>
    <string name="robotImage">robotImage</string>
    <string name="line">line</string>
    <string name="detail">DETAIL</string>
    <string name="robot">ROBOT</string>
</resources>