<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/comfortable"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="29dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/comfortable"
            android:fontFamily="@font/gabiagosran"
            android:textAppearance="@style/comfortable" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/robotImage"
            android:rotation="29"
            app:srcCompat="@drawable/robot" />

        <TextView
            android:id="@+id/comfort_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="3sp"
            android:textSize="20sp"
            android:text="@string/comfort_for"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/buttonImage"
                android:elevation="10dp"
                app:srcCompat="@drawable/icon" />

            <Button
                android:id="@+id/button1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/robotbutton"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
